# not-so-fast

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: rust.yml
not-so-fast/: Cargo.toml
not-so-fast-derive/: Cargo.toml
not-so-fast-derive/src/: lib.rs  parse.rs
not-so-fast/examples/: derive.rs  manual.rs  manual_validation.rs
not-so-fast/src/: lib.rs
not-so-fast/src/validators/: email.rs
not-so-fast/tests/: derive.rs  manual.rs  rendering.rs  serialization.rs
not-so-fast/tests/derive_tests/: args.rs  basic.rs  char_length.rs  custom.rs  fields.rs  generics.rs  items.rs  length.rs  mod.rs  nested.rs  range.rs  some.rs
