[package]
name = "not-so-fast-derive"
version = "0.1.0"
edition = "2021"
description = "Derive macro for not-so-fast validation library"
authors = ["Przemysław Kukulski <kukulski.przemyslaw@gmail.com>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/prk3/not-so-fast"
documentation = "https://docs.rs/not-so-fast-derive"
repository = "https://github.com/prk3/not-so-fast"
keywords = ["validation", "derive"]
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["parsing", "extra-traits"] }

[dev-dependencies]
not-so-fast = { path = "../not-so-fast" }
