[package]
name = "not-so-fast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive = { package = "not-so-fast-derive", path = "../not-so-fast-derive", optional = true }
serde = { version = "1", optional = true }

[dev-dependencies]
not-so-fast = { path = ".", features = ["serde"] }
serde_json = "1"
pretty_assertions = "1.3.0"

[features]
default = ["serde", "derive"]
# derive = ["not-so-fast-derive"]
