[package]
name = "not-so-fast"
version = "0.1.0"
edition = "2021"
description = "A library for data validation with derive macro"
authors = ["Przemysław Kukulski <kukulski.przemyslaw@gmail.com>"]
homepage = "https://github.com/prk3/not-so-fast"
repository = "https://github.com/prk3/not-so-fast"
keywords = ["validation", "derive"]
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
not-so-fast-derive = { package = "not-so-fast-derive", path = "../not-so-fast-derive", optional = true }
serde = { version = "1", optional = true }

[dev-dependencies]
not-so-fast = { path = ".", features = ["serde", "derive"] }
serde_json = "1"
pretty_assertions = "1.3.0"

[features]
default = []
derive = ["not-so-fast-derive"]
